<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context=".GlobalFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="30dp">

        <ImageButton
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_refresh_icon"
            android:tint="@color/colorPrimaryDark" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <RelativeLayout
            android:id="@+id/global_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/global_statistics_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorAccent"
                android:text="@string/global_statistics_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/new_cases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/global_statistics_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="24dp"
                android:text="@string/cases_today"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/new_cases_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_cases_title"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/_100_000"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/new_recovered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/global_statistics_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:text="@string/recovered_today"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/new_recovered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_recovered_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/_100_000"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/new_deaths_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_recovered_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/deaths_today"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/new_deaths_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_deaths_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/_100_000"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/total_cases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_deaths_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="24dp"
                android:text="@string/total_cases"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/total_cases_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_cases_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/_100_000"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/total_recovered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_deaths_text"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:text="@string/total_recovered"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/total_recovered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_recovered_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/_100_000"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/total_deaths_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_recovered_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/total_deaths"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/total_deaths_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_deaths_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/_100_000"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_red_dark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/data_providers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <ImageView
                    android:id="@+id/logo_0"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/university_logo"
                    android:src="@drawable/logo_blue" />

            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>