<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <ProgressBar
        android:id="@+id/pb_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/details_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap"
            android:layout_marginEnd="24dp"
            android:text="@string/country_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/details_country_flag"
            android:layout_width="135dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="@+id/details_country_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_country_name">

            <ImageView
                android:id="@+id/details_country_flag_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/country_flag" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_new_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap"
            android:text="@string/cases_today"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_country_flag" />

        <TextView
            android:id="@+id/details_new_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/recovered_today"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_new_cases"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/details_new_cases" />

        <TextView
            android:id="@+id/details_new_cases_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/in_gap"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@+id/details_new_cases"
            app:layout_constraintTop_toBottomOf="@+id/details_new_cases" />

        <TextView
            android:id="@+id/details_new_recovered_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_new_cases_text"
            app:layout_constraintStart_toStartOf="@+id/details_new_recovered" />

        <TextView
            android:id="@+id/details_new_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap"
            android:text="@string/deaths_today"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@+id/details_new_cases_text"
            app:layout_constraintTop_toBottomOf="@+id/details_new_cases_text" />

        <TextView
            android:id="@+id/details_critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_new_deaths"
            app:layout_constraintStart_toStartOf="@id/details_new_recovered_text" />

        <TextView
            android:id="@+id/details_new_deaths_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/in_gap"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@+id/details_new_deaths"
            app:layout_constraintTop_toBottomOf="@+id/details_new_deaths" />

        <TextView
            android:id="@+id/details_critical_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_new_deaths_text"
            app:layout_constraintStart_toStartOf="@+id/details_critical" />


        <TextView
            android:id="@+id/details_total_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap"
            android:text="@string/total_cases"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@id/details_new_deaths_text"
            app:layout_constraintTop_toBottomOf="@+id/details_new_deaths_text" />

        <TextView
            android:id="@+id/details_total_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_recovered"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_total_cases"
            app:layout_constraintStart_toStartOf="@id/details_critical_text"

            />

        <TextView
            android:id="@+id/details_total_cases_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/in_gap"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@+id/details_total_cases"
            app:layout_constraintTop_toBottomOf="@+id/details_total_cases" />

        <TextView
            android:id="@+id/details_total_recovered_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_total_cases_text"
            app:layout_constraintStart_toStartOf="@+id/details_total_recovered" />

        <TextView
            android:id="@+id/details_total_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap"
            android:text="@string/deaths_today"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@+id/details_total_cases_text"
            app:layout_constraintTop_toBottomOf="@+id/details_total_cases_text" />

        <TextView
            android:id="@+id/details_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_total_deaths"
            app:layout_constraintStart_toStartOf="@id/details_total_recovered_text" />

        <TextView
            android:id="@+id/details_total_deaths_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/in_gap"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@+id/details_total_deaths"
            app:layout_constraintTop_toBottomOf="@+id/details_total_deaths" />

        <TextView
            android:id="@+id/details_active_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_total_deaths_text"
            app:layout_constraintStart_toStartOf="@+id/details_active" />

        <TextView
            android:id="@+id/details_cases_POM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_gap"
            android:text="@string/cases_per_million"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@+id/details_total_deaths_text"
            app:layout_constraintTop_toBottomOf="@+id/details_total_deaths_text" />

        <TextView
            android:id="@+id/details_cases_POM_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/in_gap"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@+id/details_cases_POM"
            app:layout_constraintTop_toBottomOf="@+id/details_cases_POM" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
