<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorPrimary"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/country_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/country_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/_12"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

        <ImageView
            android:id="@+id/country_flag"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@id/country_position"
            android:contentDescription="@string/country_flag" />


        <TextView
            android:id="@+id/country_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@+id/country_new_recovered"
            android:layout_toEndOf="@id/country_flag"
            android:text="@string/country_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <TextView
            android:id="@+id/country_new_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             />

        <TextView
            android:id="@+id/country_new_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_new_cases"
            android:layout_alignParentEnd="true"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_green_dark"
            />

        <TextView
            android:id="@+id/country_new_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_new_recovered"
            android:layout_alignParentEnd="true"
            android:text="@string/_100_000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_red_dark" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>